--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </style>
     <script type='text/javascript' src='//pl27911286.effectivegatecpm.com/6e/d5/22/6ed5222564d932a76cec21e571711b43.js'></script>
     <script type='text/javascript' src='//pl27911290.effectivegatecpm.com/14/f2/fa/14f2faf0ac049496be1bf9cfd213340f.js'></script>
+    <script type='text/javascript' src='//pl27911290.effectivegatecpm.com/14/f2/fa/14f2faf0ac049496be1bf9cfd213340f.js'></script>
 </head>
 <body>
 
