--- a/index.html
+++ b/index.html
@@ -21,8 +21,70 @@
             text-indent: 40px; /* Optional: adds a slight indent for readability */
         }
     </style>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '41e79f925865585b32bf0d5cd72c7c03',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/41e79f925865585b32bf0d5cd72c7c03/invoke.js"></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '47d5f530470f08c7942d02dbf41a17a4',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/47d5f530470f08c7942d02dbf41a17a4/invoke.js"></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '2f4c90c6d7f7701c6d2569eeeb07de23',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/2f4c90c6d7f7701c6d2569eeeb07de23/invoke.js"></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '94e2e7cd524307c6fe29050e7035a79b',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/94e2e7cd524307c6fe29050e7035a79b/invoke.js"></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '813b3fcb62bacba5516bc1212627c52d',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/813b3fcb62bacba5516bc1212627c52d/invoke.js"></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'ba90a1513a02ffa4cff6af1b910243eb',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/ba90a1513a02ffa4cff6af1b910243eb/invoke.js"></script>
+    <script async="async" data-cfasync="false" src="//pl27911342.effectivegatecpm.com/c902e5b8cbe491f1287283eef086718c/invoke.js"></script>
+<div id="container-c902e5b8cbe491f1287283eef086718c"></div>
     <script type='text/javascript' src='//pl27911286.effectivegatecpm.com/6e/d5/22/6ed5222564d932a76cec21e571711b43.js'></script>
-    <script type='text/javascript' src='//pl27911290.effectivegatecpm.com/14/f2/fa/14f2faf0ac049496be1bf9cfd213340f.js'></script>
+    https://www.effectivegatecpm.com/b1d5gmjuiz?key=8b06473b9e746cb3ef30c81b43e79358
     <script type='text/javascript' src='//pl27911290.effectivegatecpm.com/14/f2/fa/14f2faf0ac049496be1bf9cfd213340f.js'></script>
 </head>
 <body>
